--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
+displayName=A Damage Tracker
 author=Nobody
 description=An example greeter plugin
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.damagetracker.DamageTrackerPlugin
